force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/Form_Builder__Titan_Sign_Document__c.object-meta.xml
<CustomObject>
    <label>Titan Sign Document</label>
    <nameField>
        <displayFormat>TSD-{0000000}</displayFormat>
        <label>TSD#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Titan Sign Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>