force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <formula>Consent__r.Patient_Donor__r.Account.Household_Clinic__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinic</label>
    <type>Text</type>
</CustomField>