force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Clinic_Owner__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Owner__c</fullName>
    <formula>Consent__r.Owner_Clinic_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinic Owner</label>
    <type>Text</type>
</CustomField>