force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consent__c Lookup</description>
    <label>Consent</label>
    <referenceTo>Consent__c</referenceTo>
    <relationshipLabel>Titan Sign Document</relationshipLabel>
    <relationshipName>tts9d59127f03744f5f8ce11ff3e54431c7</relationshipName>
    <type>Lookup</type>
</CustomField>