force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Lookup</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Titan Sign Document</relationshipLabel>
    <relationshipName>tts3cff122eae5d48e9954997fc70eed6fe</relationshipName>
    <type>Lookup</type>
</CustomField>