force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cycle__c Lookup</description>
    <label>Cycle</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Titan Sign Document</relationshipLabel>
    <relationshipName>tts5c3491dc51e747b190ce0190af1a0e36</relationshipName>
    <type>Lookup</type>
</CustomField>