force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Cycle_Name__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Name__c</fullName>
    <formula>Consent__r.Cycle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Name</label>
    <type>Text</type>
</CustomField>