force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Form_Builder__Collaboration_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Collaboration_Status__c</fullName>
    <description>The status of the CLM Collaboration</description>
    <inlineHelpText>The status of the CLM Collaboration</inlineHelpText>
    <label>Collaboration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>