force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Form_Builder__Completed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Completed_Percentage__c</fullName>
    <formula>Form_Builder__Number_Of_Completed_Documents__c /  Form_Builder__Number_Of_Signers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>