force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Form_Builder__Current_Signer__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Current_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Signer/Collaborator</label>
    <referenceTo>Form_Builder__TItan_Sign_Tracking__c</referenceTo>
    <relationshipLabel>Titan Sign Documents</relationshipLabel>
    <relationshipName>Titan_Sign_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>