force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Form_Builder__Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Generated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TItan_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>