force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Form_Builder__Number_Of_Completed_Documents__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Number_Of_Completed_Documents__c</fullName>
    <label>Number Of Completed Documents</label>
    <summaryFilterItems>
        <field>Form_Builder__TItan_Sign_Tracking__c.Form_Builder__Event__c</field>
        <operation>equals</operation>
        <value>Signed, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_Builder__TItan_Sign_Tracking__c.Form_Builder__TItan_Document__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>