force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Form_Builder__Titan_DocId__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Titan_DocId__c</fullName>
    <externalId>true</externalId>
    <label>Titan DocId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>