force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Form_Builder__Titan_TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Titan_TemplateId__c</fullName>
    <label>Titan TemplateId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>