force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Form_Builder__Using_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Using_IP_Address__c</fullName>
    <label>Using IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>