force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Form_Builder__Voided_By__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Voided_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voided By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Voided_Titan_Sign_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>