force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <formula>Consent__r.Patient_Full_Name__c&amp;&quot; - &quot;&amp;Consent__r.Patient_ID_Display_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>