force-app/main/default/objects/Form_Builder__Titan_Sign_Document__c/listViews/Form_Builder__All.listView-meta.xml
<ListView>
    <fullName>Form_Builder__All</fullName>
    <columns>NAME</columns>
    <columns>Form_Builder__Document_Name__c</columns>
    <columns>Form_Builder__Document_Status__c</columns>
    <columns>Form_Builder__Number_Of_Signers__c</columns>
    <columns>Form_Builder__Current_Signer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>